--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+T-POO-700-T1/elixirproj_api/_build
 T-POO-700-T2/miniproj/node_modules/
 T-POO-700-T2/bootstrap/node_modules/
-T-POO-700-T1/_build
+T-POO-700-T3/bootstrap/hello/_build
