--- a/T-POO-700-T2/miniproj/package.json
+++ b/T-POO-700-T2/miniproj/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "password-hash": "^1.2.2",
+    "vue": "^2.6.10",
+    "vue-cookies": "^1.5.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
