--- a/T-POO-700-T2/miniproj/package.json
+++ b/T-POO-700-T2/miniproj/package.json
@@ -12,7 +12,9 @@
     "core-js": "^2.6.5",
     "password-hash": "^1.2.2",
     "vue": "^2.6.10",
-    "vue-cookies": "^1.5.13"
+    "vue-cookies": "^1.5.13",
+    "bootstrap-vue": "^2.0.1",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
