--- a/T-POO-700-T2/miniproj/package.json
+++ b/T-POO-700-T2/miniproj/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
     "password-hash": "^1.2.2",
+    "sweetalert2": "^8.17.6",
     "vue": "^2.6.10",
-    "vue-cookies": "^1.5.13"
+    "vue-cookies": "^1.5.13",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
