--- a/T-POO-700-T3/devops_elixir/Dockerfile_back
+++ b/T-POO-700-T3/devops_elixir/Dockerfile_back
@@ -13,6 +13,7 @@ COPY . /back_app
 
 #RUN cd /gotcitytimemanager; \
 RUN mix local.hex --force; \
+    mix local.rebar rebar3 ./rebar3; \
     mix local.rebar --force; \
     mix deps.get --only prod
 
