--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ T-POO-700-T2/bootstrap/node_modules/
 T-POO-700-T3/bootstrap/hello/_build
 T-POO-700-T3/devops_elixir/build
 T-POO-700-T6/bootstrap/node_modules
+T-POO-700-T2/test
