--- a/T-POO-700-T2/miniproj/package.json
+++ b/T-POO-700-T2/miniproj/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
+    "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "password-hash": "^1.2.2",
     "sweetalert2": "^8.17.6",
     "vue": "^2.6.10",
