--- a/T-POO-700-T2/miniproj/package.json
+++ b/T-POO-700-T2/miniproj/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "password-hash": "^1.2.2",
     "sweetalert2": "^8.17.6",
     "vue": "^2.6.10",
